--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,6 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    testCompile 'junit:junit:4.12'
 
     //Support Library
     compile 'com.android.support:appcompat-v7:25.1.0'
@@ -51,7 +50,9 @@ dependencies {
     //Dagger
     compile 'com.google.dagger:dagger:2.8'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.8'
-
     //Play Services
     compile 'com.google.android.gms:play-services-auth:10.0.1'
+
+    testCompile 'junit:junit:4.12'
+    compile 'com.android.support:cardview-v7:25.1.0'
 }
