--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,8 @@
 apply plugin: 'com.android.application'
 
+repositories {
+    maven { url "https://jitpack.io" }
+}
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
@@ -50,9 +53,13 @@ dependencies {
     //Dagger
     compile 'com.google.dagger:dagger:2.8'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.8'
-    //Play Services
-    compile 'com.google.android.gms:play-services-auth:10.0.1'
+
+    //Parceler
+    compile 'org.parceler:parceler-api:1.1.6'
+    annotationProcessor 'org.parceler:parceler:1.1.6'
+
+    //CreditCardView
+    compile 'com.github.sharish:CreditCardView:v1.0.4'
 
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:cardview-v7:25.1.0'
 }
